# nlp-lowlevel

./: README.md  bpe_nlp.model  bpe_nlp.vocab  pyproject.toml
.cursor/rules/: cpp_refactoring.mdc  python_rules.mdc  uv_rule_python.mdc
AAGP-Conference/: README.md  api_config.json  interactive_map.html  municipal_analysis.py  validate_solution.py  workshop_demo.py  workshop_plan.md
MCP/: app.py
NLP/: BPE.py
TypescriptCode/: legacy_system.ts
app/: BPE.py
component-test/: package-lock.json  package.json
component-test/src/app/: globals.css  page.tsx
component-test/src/components/: studio-shots-gallery-enhanced.tsx  studio-shots-gallery.tsx
hf/llm/chapter1/: main.py
hf/mcp/chapter2/: README.md  config.json  package.json
mcp-chapter2/: .gitignore  client.py  mcp.json  pnpm-lock.yaml
mcp-chapter2/tiny-agents/: agent.json
mock_project/: README.md
mock_project/cpp_legacy/: CMakeLists.txt  README.md  run_tests.sh
mock_project/cpp_legacy/include/: data_structures.hpp  legacy_system.h  legacy_system_class.hpp  utils.hpp
mock_project/cpp_legacy/src/: data_structures.cpp  legacy_system.cpp  legacy_system_class.cpp  main.cpp  modern_main.cpp  utils.cpp
mock_project/cpp_legacy/tests/: CMakeLists.txt  README.md  You are a coding assistant responsible f.md  legacy_system_tests.cpp
mock_project/typescript_app/: package.json  tsconfig.json
mock_project/typescript_app/src/: index.ts
mock_project/typescript_app/src/models/: data_models.ts
mock_project/typescript_app/src/services/: utility_functions.ts
n8n-automations/: fireflies.json  main.js
samples/: corpus.txt
